--- a/points.jade
+++ b/points.jade
@@ -1,7 +1,7 @@
 !!! 5
 html(lang="en")
   head
-    title bay cities
+    title Points Mapper
     link(href="screen.css", media="screen", rel="stylesheet", type="text/css")
     script(type="text/javascript", src="http://maps.googleapis.com/maps/api/js?sensor=false")
     script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js")
@@ -11,5 +11,6 @@ html(lang="en")
     block points
   body
     #left
+    #messages
     #content
       #map_canvas
